@@ -26,7 +26,8 @@ OPJ_SRC = \
 ../phix_manager.c \
 ../ppix_manager.c \
 ../thix_manager.c \
-../tpix_manager.c 
+../tpix_manager.c \
+../function_list.c
 
 libopenjpeg_JPWL_la_CPPFLAGS = \
 -I. \
